<resources>
    <string name="app_name">My Application7</string>
    <string name="zero">0</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="c">C</string>
    <string name="plus">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">×</string>
    <string name="one">1</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="division">/</string>
    <string name="ac">AC</string>
</resources>